<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">温馨书屋</string>
   
    <string name="menu_settings">Settings</string>
    <string name="top_set">设置</string>
    
    <color name="grey21">#CCCCCC</color>
    <color name="white">#ffffff</color>
     
    <color name="yellow">#FFFF33</color>
    <color name="red">#990000</color>
    <color name="green">#669900</color>
    
    
    
	<string name="confirm">确定</string>
	<string name="cancel">取消</string>
	<string name="loginout_title">确认退出</string>
	<string name="loginout_msg">真的要退出此应用?</string>
	<string name="no_internet">你的手机没有链接到网络</string>
	
	
	<string name="welcomewords"><u>欢迎使用温馨书屋</u></string>
	<string name="imagedescription"><b>欢迎来到温馨书屋</b></string>
	
	
	
	<string name="action_search"><b>搜索</b></string>
	<string name="action_upload"><b>上传</b></string>
	<string name="action_rating"><b>信用</b></string>
 
    
    
 
   <string name="search_hit">输入书名、关键字</string>
   <string name="passwordhint">数字、字母</string>
  
    <string name="search_text">搜索</string>
    <string name="top_bookmarkting">书市</string>
    <string name="top_mybookhouse">书屋</string>
    <string name="low_rating">信用</string>
    <string name="low_searchbook">搜书</string>
    <string name="low_uploading">上传</string>
    <string name="user">用户名</string>
    <string name="hint">文字、字母</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="regist">注册</string>
    <string name="choosepic">选择图片</string>
    <string name="addwords">添加文字描述</string>
    <string name="sure2add">确定</string>
    <string name="addwordshint">请添加文字描述</string>
     <string name="myrating">我的信用</string>
	<string name="photo_name">相片名称</string>
	<string name="tip">请选择喜欢的图书</string>
	<string name="choosetype">请选择类别</string>
	<string name="mybookstore_expandablelist">借出、预借情况</string>
	<string name="pleasechooseschool">您的学院</string>
	<string name="usersex_female">女</string>
	<string name="usersex_male">男</string>
	<string name="choosesex">您的性别</string>
	<string name="userphonenumber">电话号码</string>
	<string name="phonenum_hint">请填写您的电话号码</string>
	<string name="developerinformation">哈尔滨商业大学电子商务专业版权所有</string>
	 
	<string name="user_search_result">您的搜索结果入如下</string>
	<string name="borrow_time">请填写借阅天数</string>
	<string name="only_day">填写天数</string>
	<string name="if_private_contact">是否私下联系</string>
	<string name="yes">是的</string>
	<string name="no">不用</string>
	<string name="borrow_btn_yes">借来</string>
	<string name="borrow_cancell">取消</string>
	
	<string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
</resources>