<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center"
    >

  <TableRow
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" >

<TextView 
    android:text="@string/borrow_time"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    />
 <EditText 
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:inputType="number"
     android:hint="@string/only_day"/>
</TableRow>  

<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

<TextView 
    android:text="@string/if_private_contact"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    />
<RadioGroup >
 <RadioButton android:text="@string/yes"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"/>
 <RadioButton android:text="@string/no"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"/>
 </RadioGroup>
</TableRow>
 
<Button
    android:id="@+id/borrow_btn"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/borrow_btn_yes" 
     />

<Button
    android:id="@+id/borrow_cancell"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/borrow_cancell" 
     />
 
</LinearLayout>
