<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        android:showAsAction="ifRoom|withText"
        android:orderInCategory="1"/>
    <item
        android:id="@+id/action_upload"
        android:icon="@drawable/actionbar_add_icon"
        android:title="@string/action_upload"
        android:showAsAction="ifRoom|withText"
        android:orderInCategory="2"/>
    <item
        android:id="@+id/action_rating"
        android:icon="@drawable/ic_menu_favorite"
        android:title="@string/action_rating"
        android:showAsAction="ifRoom|withText"
        android:orderInCategory="3"/>

</menu>